# chessApp

ChessProxyServer/: package-lock.json  package.json
ChessProxyServer/Client/css/: aichat.css  chat.css  game.css  menu.css  moveLog.css  navbar.css  personal.css  sign.css  watch.css
ChessProxyServer/Client/html/: game.html  menu.html  sign.html
ChessProxyServer/Client/js/: aichat.js  game.js  navbar.js  sign.js  utils.js  voice.js
ChessProxyServer/Server/: gameContext.js  nodeCppHandler.js  server.js
ChessProxyServer/Server/controllers/: firebaseAuthController.js  gameController.js  statsController.js
ChessProxyServer/Server/middleware/: verify.js
ChessProxyServer/Server/routes/: auth.js  game.js  stats.js
chessStateServer/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Chess_Piece.cpp  Chess_Piece.h  Conn_handler.cpp  Conn_handler.h  Game.cpp  Game.h  GlobalDefinitions.cpp  GlobalDefinitions.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Server.cpp  Server.h  conanfile.py  main.cpp  readme.md
